<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:title="Chức năng"
        tools:ignore="HardcodedText">
        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:id="@+id/nav_thongke"
                    android:icon="@drawable/ic_thongke"
                    android:title="@string/nav_thong_ke" />
            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reload"
            android:icon="@drawable/ic_refresh"
            android:title="@string/nav_refresh" />
        <item
            android:id="@+id/nav_show_hide_complete"
            android:icon="@drawable/ic_complete_gray_32dp"
            android:title="@string/nav_showHideComplete"
            android:visible="false" />
        <item
            android:id="@+id/nav_delete_searching"
            android:icon="@drawable/ic_delete"
            android:title="@string/nav_xoa_tim_kiem" />
        <item
            android:id="@+id/nav_visible_float_button"
            android:icon="@drawable/ic_action_visible_off"
            android:title="@string/nav_an_nut_chuc_nang" />

        <item
            android:id="@+id/nav_logOut"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_log_out" />
    </group>


</menu>
