<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hcm.ditagis.com.vinhlong.qlsc.FindRouteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:alpha="0.9"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/find_route_textview_begin"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/etOrigin"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:background="@drawable/layout_edittext_white"
                        android:hint="@string/find_route_diem_bat_dau"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/find_route_textview_end"
                        android:textColor="@color/colorWhite"
                        android:textSize="17sp" />

                    <EditText
                        android:id="@+id/etDestination"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="6"
                        android:background="@drawable/layout_edittext_white"
                        android:hint="@string/find_route_diem_ket_thuc"
                        android:inputType="text"
                        android:padding="5dp"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite" />
                </LinearLayout>

            </LinearLayout>

            <ImageButton
                android:id="@+id/imgBtn_find_route_change_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:src="@drawable/arrow_couple"
                android:contentDescription="@string/find_route_image_change" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFindPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_shape_button_find_route"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/title_activity_find_route"
                android:textColor="@color/colorWhite" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/route"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/find_route_image_route" />

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/find_route_textview_route"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="5dp" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:src="@drawable/clock"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/find_route_image_time" />

            <TextView
                android:id="@+id/tvDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/find_route_textview_time"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:orientation="vertical">

            <include layout="@layout/layout_find_route_bottomsheet" />


        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <hcm.ditagis.com.vinhlong.qlsc.entities.CustomLinearLayout
            android:id="@+id/layout_find_route_show_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:padding="10dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_navigation_menu"
                android:contentDescription="@string/find_route_image_menu" />

            <TextView
                android:id="@+id/txt_find_route_show_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/find_route_cac_buoc"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
        </hcm.ditagis.com.vinhlong.qlsc.entities.CustomLinearLayout>
    </FrameLayout>

</LinearLayout>
